# challenge

./: CMakeLists.txt  README.md  setup.txt
src/: main.cpp
